--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -12,7 +12,7 @@
   <%= form.date_field :party_date, value: Date.today %>
 
   <%= form.label "Start time" %>
-  <%= form.time_field :start_time, value: Time.now %>
+  <%= form.time_field :start_time, value: Time.now.strftime("%H:%M") %>
 
   <p>Invite Other Users</p>
   <%= form.fields_for :guests do |guest| %>
