--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -10,6 +10,14 @@
       <%= form.text_field :email %>
     </div>
     <div>
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+    </div>
+    <div>
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation %>
+    </div>
+    <div>
       <%= form.submit "Create New User" %>
     </div>
   </div>
