Change password text_field to a password_field

--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -4,6 +4,6 @@
   <%= form.label :email %>
   <%= form.text_field :email, value: @user&.email %>
   <%= form.label :password %>
-  <%= form.text_field :password %>
+  <%= form.password_field :password %>
   <%= form.submit "Log In" %>
 <% end %>
