Add Discover Movies link to all webpages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="current-menu-item"><%= link_to "Home", root_path %></li>
+          <li class="current-menu-item"><%= link_to "Discover Movies", discover_path %>
         </ul>
       </nav>
     </div>
