--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,16 @@
 <div style="text-align: center;">
+<% if @user %>
+  <a href=<%= logout_path %> class="button">Log Out</a>
+<% else %>
   <a href=<%= register_user_path %> class="button">Create New User</a>
   <a href=<%= login_path %> class="button">Log In</a>
+<% end %>
 </div>
-<br>
+<br> 
+
+<% if @user %>
 <h2 style="text-align: center;">
-  Existing Users:</h2>
+  Other Users:</h2>
 <div class="table-container">
   <table class="table">
     <thead>
@@ -14,12 +20,13 @@
       </tr>
     </thead>
     <tbody>
-      <% @users.each do |user| %>
+      <% @user.friends.each do |user| %>
         <tr class="tr">
-          <td class="td1"><%= link_to user.name, login_path(user_id: user.id) %></td>
+          <td class="td1"><%= user.name %></td>
           <td class="td1"><%= user.email %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 </div>
+<% end %>
