--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,10 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="current-menu-item"><%= link_to "Home", root_path %></li>
-          <li class="current-menu-item"><%= link_to "Discover Movies", discover_path %>
+          <li class="current-menu-item"><%= link_to "Discover Movies", discover_path %></li>
+          <% if session[:user_id] %>
+            <li class="current-menu-item"><%= link_to "Dashboard", dashboard_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
