--- a/app/views/users/_party_table.html.erb
+++ b/app/views/users/_party_table.html.erb
@@ -1,4 +1,3 @@
-<h4>Viewing Party ID: <%= party.id %></h4>
 <table border="1">
   <thead>
     <tr>
@@ -10,25 +9,30 @@
       <th>Guests</th>
     </tr>
   </thead>
+  
   <tbody>
+  <% parties.each do |party| %>
     <tr>
       <td>
         <%= image_tag party.movie_image, width: 100 %>
       </td>
+
       <td>
-        <%= link_to party.movie_title, user_movie_path(@user, party.movie_id) %>
+        <%= link_to party.movie_title, movie_path(party.movie_id) %>
       </td>
+
       <td><%= party.party_date %></td>
+
       <td><%= party.start_time.strftime("%I:%M %p") %></td>
+
       <td id="host-name-td-<%= party.id %>" class="party-host">
-        <% host = party.party_guests.find { |pg| pg.host } %>
-        <%= host ? host.user.name : "N/A" %>
+        <%= party.host.name %>
       </td>
-      <td>
-        <% guest_names = party.party_guests.map { |pg| pg.user.name } %>
-        <% guest_list = guest_names.map { |name| name == @user.name ? "<strong>#{name}</strong>" : name }.join(", ").html_safe %>
-        <%= guest_list %>
+
+      <td id="guest-list-td-<%= party.id %>">
+        <%= party.invitee_names.map { |name| name == @user.name ? "<strong>#{name}</strong>" : name }.join(", ").html_safe %>
       </td>
     </tr>
+  <% end %>
   </tbody>
 </table>
