Change register_user_path to register_path

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% if @user %>
   <a href=<%= logout_path %> class="button">Log Out</a>
 <% else %>
-  <a href=<%= register_user_path %> class="button">Create New User</a>
+  <a href=<%= register_path %> class="button">Create New User</a>
   <a href=<%= login_path %> class="button">Log In</a>
 <% end %>
 </div>
